
 * Removed support for Python 3.4
 * Added support for `short_description` for field labels in modeladmin's `InspectView` (Wesley van Lee)
 * Rearranged SCSS folder structure to the client folder and split them approximately according to ITCSS. (Naomi Morduch Toubman, Jonny Scholes, Janneke Janssen, Hugo van den Berg)
 * Added support for specifying cell alignment on TableBlock (Samuel Mendes)
 * Fix: ModelAdmin no longer fails when filtering over a foreign key relation (Jason Dilworth, Matt Westcott)
 * Fix: The Wagtail version number is now visible within the Settings menu (Kevin Howbrook)
 * Fix: Scaling images now rounds values to an integer so that images render without errors (Adrian Brunyate)
 * Fix: Revised test decorator to ensure TestPageEditHandlers test cases run correctly (Alex Tomkins)
 * Fix: Wagtail bird animation in admin now ends correctly on all browsers (Deniz Dogan)
 * Fix: Explorer menu no longer shows sibling pages for which the user does not have access (Mike Hearn)
 * Fix: Fixed occurences of invalid HTML across the CMS admin (Thibaud Colas)
 * Fix: Admin HTML now includes the correct `dir` attribute for the active language (Andreas Bernacca)
 * Fix: Fix type error when using `--chunk_size` argument on `./manage.py update_index` (Seb Brown)
 * Fix: Avoid rendering entire form in EditHandler's `repr` method (Alex Tomkins)


2.5.1 (07.05.2019)
~~~~~~~~~~~~~~~~~~

 * Fix: Prevent crash when comparing StructBlocks in revision history (Adrian Turjak, Matt Westcott)


2.5 (24.04.2019)
~~~~~~~~~~~~~~~~

 * Django 2.2 support (Matt Westcott, Andy Babic)
 * Added support for customising EditHandler-based forms on a per-request basis (Bertrand Bordage)
 * Added more informative error message when `|richtext` filter is applied to a non-string value (mukesh5)
 * Automatic search indexing can now be disabled on a per-model basis via the `search_auto_update` attribute (Karl Hobley)